app/assets/stylesheets/genres.css.scss
/* Genres Index */

span.genres-index {
  width: 660px;
  height: 490px;
}

span.genres-index span.page-link-big {
  width: 676px;
}

span.genres-index li.page-link-big {
  margin-top: 10px;
  width: 676px;
  height: 500px;
  position: relative;
}

span.genres-index li.page-link {
  width: 330px;
  height: 241px;
  margin-top: 10px;
}

span.genres-index span.title {
  position: absolute;
  font-size: 16px;
  color: rgb(98, 98, 98);
  margin: 10px;
  z-index: 3;
}

span.genres-index span.title i {
  color: rgb(255, 195, 28);
}

span.genres-index li.page-link-big h2 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 670px;
  font-size: 20px;
  bottom: 45px;
}

span.genres-index li.page-link-big h3 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 670px;
  bottom: 25px;
  font-size: 16px;
}

span.genres-index li.page-link-big img {
  min-height: 500px;
}

span.genres-index small {
  position: absolute;
  bottom: 5px;
  font-size: 16px;
  margin-left: 5px;
  z-index: 3;
  -webkit-transition: color 1s;
}

li.page-link-big:hover small {
  color: white;
}

li.page-link:hover small {
  color: white;
}

span.genres-index li.page-link {
  position: relative;
}

span.genres-index li.page-link h2 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 330px;
  font-size: 20px;
  bottom: 45px;
  text-shadow:
  -1px -1px 0 #000,
  1px -1px 0 #000,
  -1px 1px 0 #000,
  1px 1px 0 #000;
}

span.genres-index li.page-link h3 {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 330px;
  bottom: 25px;
  font-size: 16px;
  text-shadow:
  -1px -1px 0 #000,
  1px -1px 0 #000,
  -1px 1px 0 #000,
  1px 1px 0 #000;
}

span.genres-index li.page-link img {
  min-height: 241px;
}

/* Genre Show */

h1.genre-title {
  padding: 10px 0;
  font-size: 12px;
}

span.page-link-big {
  display: inline-block;
  width: 510px;
  height: 410px;
  float: left;
  margin-right: 20px;
}

li.page-link-big {
  display: inline-block;
  overflow: hidden;
  width: 506px;
  height: 406px;
  border: 2px solid rgb(54, 54, 54);
}

li.page-link-big h2 {
  position: absolute;
  font-size: 38px;
  margin-left: 5px;
  margin-top: 5px;
  color: rgb(210, 210, 210);
  z-index: 3;
  -webkit-transition: color 1s;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 500px;
  text-shadow:
  -1px -1px 0 #000,
  1px -1px 0 #000,
  -1px 1px 0 #000,
  1px 1px 0 #000;
}

li.page-link-big h3 {
  position: absolute;
  z-index: 3;
  font-size: 24px;
  margin-left: 5px;
  margin-top: 45px;
  color: rgb(190, 190, 190);
  -webkit-transition: color 1s;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 500px;
  text-shadow:
  -1px -1px 0 #000,
  1px -1px 0 #000,
  -1px 1px 0 #000,
  1px 1px 0 #000;
}

li.page-link-big img {
  width: 100%;
  min-height: 410px;
  overflow: hidden;
  opacity: 0.6;
  -webkit-transition: opacity 1s;
}

li.page-link-big img:hover {
  opacity: 1;
}

li.page-link-big:hover h2 {
  color: white;
}

li.page-link-big:hover h3 {
  color: white;
}

span.page-links {
  width: 520px;
  height: 410px;
  float: left;
}

li.page-link {
  display: inline-block;
  width: 240px;
  height: 200px;
  overflow: hidden;
  border: 2px solid rgb(54, 54, 54);
  margin-right: 10px;
}

li.page-link h2 {
  position: absolute;
  margin-left: 5px;
  margin-top: 5px;
  z-index: 3;
  font-size: 20px;
  color: rgb(210, 210, 210);
  white-space: nowrap;
  text-overflow: ellipsis;
  -webkit-transition: color 1s;
  max-width: 500px;
  text-shadow:
  -1px -1px 0 #000,
  1px -1px 0 #000,
  -1px 1px 0 #000,
  1px 1px 0 #000;
}

li.page-link h3 {
  position: absolute;
  margin-left: 5px;
  margin-top: 33px;
  font-size: 16px;
  z-index: 3;
  color: rgb(190, 190, 190);
  -webkit-transition: color 1s;
  white-space: nowrap;
  text-overflow: ellipsis;
  max-width: 500px;
  text-shadow:
  -1px -1px 0 #000,
  1px -1px 0 #000,
  -1px 1px 0 #000,
  1px 1px 0 #000;
}

li.page-link img {
  float: left;
  width: 100%;
  min-height: 200px;
  opacity: 0.6;
  -webkit-transition: opacity 1s;
}

li.page-link img:hover {
  opacity: 1;
}

li.page-link:hover h2 {
  color: white;
}

li.page-link:hover h3 {
  color: white;
}

ul.genre-show {
  display: block;
}

a.pages-index {
  display: block;
  float: right;
  padding-top: 15px;
  margin-right: 73px;
}

a.pages-index:hover {
  color: rgb(91, 167, 194);
}

